# ecs427

./: README.md  pyproject.toml
assignments/: ecs427__assignment-01.ipynb
tests/: test1.ipynb
